# humanline

./: .gitignore  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  README.md  check_railway_resources.sh  deploy-vercel.sh  docker-compose.yml  docker-dev.sh  env.dev  env.example  env.production  migrate-production.py  package-lock.json  package.json  profile_test.sh  railway.toml  setup-vercel-env.sh  test_api.sh  vercel.json
.github/: pull_request_template.md
.github/workflows/: test.yml
backend/: .coveragerc  .dockerignore  .env  .pre-commit-config.yaml  Dockerfile  OTP_SETUP_GUIDE.md  README-Docker.md  README.md  SUPABASE_SETUP.md  __init__.py  alembic.ini  diagnostics.py  env.example  main.py  pyproject.toml  pytest.ini  railway.toml  render.yaml  requirements.txt  start.sh  supabase_otp_setup.sql  test_jwt.py  test_supabase_connection.py
backend/.github/workflows/: test.yml
backend/alembic/: env.py
backend/alembic/versions/: 3be6a6596f05_add_employees_table_with_user_.py  4442e32d81b7_add_custom_text_fields_for_other_options.py  60923fa88c62_add_email_verification_code_field.py  92e55afebdb6_add_unique_constraint_to_email_.py  a225940b35bc_add_role_field_to_users_table.py  a7583583d907_initial_migration_create_users_table.py  b19cb97a02aa_add_onboarding_table_v2.py  b22706b0b1e3_add_onboarding_table.py  c0a6da13d2c0_add_comprehensive_employee_tables_with_.py  cb1b89f6a33a_add_nullable_needs_onboarding_field_to_.py  ead7fea9d7c9_remove_long_token_keep_only_6_digit_.py  eb7be7a4f539_remove_custom_other_fields.py  ebfd2309aa45_add_email_verification_fields_to_users_.py  f1a2b3c4d5e6_add_comprehensive_employee_tables.py
backend/api/: __init__.py  auth.py  diagnostics.py  employee.py  onboarding.py  users.py
backend/app/: config.py
backend/app/dependencies/: auth.py
backend/app/models/: onboarding.py  token.py  user.py
backend/app/routers/: auth.py  onboarding.py
backend/app/services/: auth_service.py  jwt_service.py  onboarding_service.py  otp_service.py  supabase_auth_service.py
backend/core/: config.py  database.py  dependencies.py  rbac.py  security.py
backend/docs/: CI_CD_GUIDE.md
backend/middleware/: __init__.py  profiler.py  security.py
backend/models/: __init__.py  employee.py  onboarding.py  user.py
backend/schemas/: __init__.py  auth.py  employee.py  onboarding.py  user.py
backend/services/: __init__.py  auth_service.py  email_service.py  employee.py  onboarding_service.py  user_service.py
backend/sql/: create_onboarding_table.sql  fix_onboarding_rls_policies.sql
backend/sql/init/: 01-init.sql
backend/tests/: __init__.py  conftest.py
backend/tests/integration/: __init__.py  test_employee_api.py  test_employee_bank_info_api.py  test_employee_data_masking.py  test_employee_documents_api.py  test_employee_personal_details_api.py  test_onboarding_api.py
backend/tests/unit/: __init__.py  test_employee_models.py  test_employee_schemas.py  test_employee_service.py  test_onboarding_model.py  test_onboarding_schemas.py  test_onboarding_service.py
backend/utils/: __init__.py  security.py
frontend/: .dockerignore  Dockerfile  README_CONFIRM.md  next.config.ts  package-lock.json  package.json  vercel.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/api/health/: route.ts
frontend/src/app/confirm/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/dashboard/employees/: layout.tsx  page.tsx
frontend/src/app/dashboard/employees/directory/: page.tsx
frontend/src/app/dashboard/employees/manage/: page.tsx
frontend/src/app/dashboard/employees/manage/[slug]/: page.tsx
frontend/src/app/onboarding/: page.tsx
frontend/src/app/signin/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/components/: OnboardForm4.tsx  app-sidebar.tsx  onboardform1.tsx  onboardform2.tsx  onboardform3.tsx
frontend/src/components/auth/: ProtectedRoute.tsx
frontend/src/components/employees/: AddEmployeeForm.tsx  DocumentForm.tsx  EmployeeTable.tsx  EmployeeTableMain.tsx  EmploymentInformationForm.tsx  PayrollForm.tsx  PersonalInformationForm.tsx  SettingsForm.tsx
frontend/src/components/navigation/: Greeting.tsx  MainNavigation.tsx  MessageIcon.tsx  NavSearch.tsx  Navigation.tsx  NavigationWithSidebar.tsx  NotificationIcon.tsx  ProfileIcon.tsx
frontend/src/components/onboarding/: DomainValidationExample.tsx  form1.tsx  form2.tsx  form3.tsx  form4.tsx
frontend/src/components/sidebar/: nav-main.tsx  nav-projects.tsx  nav-secondary.tsx
frontend/src/components/table/: column.tsx  data-table.tsx  data-table2.tsx
frontend/src/components/theme/: nav-theme-switch.tsx
frontend/src/components/ui/: domain-input.tsx  input-otp.tsx  sidebar.tsx  signinform.tsx  signupform.tsx
frontend/src/components/widgets/: teamPerformance.tsx  totalEmployee.tsx  totalJob.tsx
frontend/src/contexts/: OnboardingContext.tsx
frontend/src/data/api/: auth.ts  client.ts  employees.ts  onboarding.ts  types.ts
frontend/src/data/demo/: employees.ts  index.ts
frontend/src/data/hooks/: index.ts  useAuth.ts  useOnboarding.ts  useUser.ts
frontend/src/hooks/: useDomainValidation.ts  useEmployees.ts
frontend/src/lib/: auth.ts  utils.ts
frontend/src/types/: auth.ts  onboarding.ts
nginx/: nginx.conf
scripts/: README.md  clear-all-tables.py  clear-all-tables.sh  delete-all-users.sh
