[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "splenwilz", email = "godswill.williamsz@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "email-validator>=2.3.0",
    "fastapi>=0.117.1",
    "fastapi-debug-toolbar>=0.6.3",
    "greenlet>=3.2.4",
    "passlib[argon2,bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.1.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.37.0",
    "aiosmtplib>=3.0.0",
    "jinja2>=3.1.6",
]

[project.scripts]
backend = "main:main"
